--- a/exercicio12.html
+++ b/exercicio12.html
@@ -8,7 +8,7 @@
         var alturas = [1.60, 1.60, 1.60, 1.55, 1.54, 1.54, 1.55, 1.65, 1.56, 1.40, 1.50, 1.50, 2.00, 1.80, 1.92, 1.50, 1.65, 1.67, 1.67, 1.68, 1.60, 1.65, 1.50, 1.50, 1.55, 1.50, 1.80, 1.90, 1.92, 1.80];
 
         var somaAlturas = 0;
-        var alunosMaisDe13ComAlturaInferior = 0;
+        var alunos13AlturaInferior = 0;
 
         for (var i = 0; i < idades.length; i++) {
             somaAlturas += alturas[i];
@@ -16,10 +16,10 @@
         var mediaAltura = somaAlturas / alturas.length;
         for (var i = 0; i < idades.length; i++) {
             if (idades[i] > 13 && alturas[i] < mediaAltura) {
-                alunosMaisDe13ComAlturaInferior++;
+                alunos13AlturaInferior++;
             }
         }
-        alert("Número de alunos com mais de 13 anos e altura inferior à média: " + alunosMaisDe13ComAlturaInferior);
+        alert("Número de alunos com mais de 13 anos e altura inferior à média: " + alunos13AlturaInferior);
     </script>
 </head>
 <body>
