--- a/exercicio15.html
+++ b/exercicio15.html
@@ -26,7 +26,7 @@
         for (var i = 0; i < notas.length; i++) {
             soma += notas[i];
         }
-        var media = notas.length > 0 ? soma / notas.length : 0; // Verifica se a lista não está vazia
+        var media = notas.length > 0 ? soma / notas.length : 0;
         alert("Soma dos valores: " + soma);
         alert("Média dos valores: " + media);
         var quantidadeAcimaMedia = 0;
