--- a/exercicio19.html
+++ b/exercicio19.html
@@ -11,7 +11,7 @@
             if (resposta === 0) break;
             if (resposta < 0 || resposta > 6) {
                 alert("Resposta inválida! Informe um valor entre 0 e 6.");
-                continue; // Ignora respostas inválidas
+                continue; 
             }
             votos[resposta]++;
             totalVotos++;
