--- a/exercicio14.html
+++ b/exercicio14.html
@@ -14,7 +14,7 @@
         ];
         for (var i = 0; i < perguntas.length; i++) {
             var resposta = prompt(perguntas[i] + " (Responda com 'sim' ou 'não'):");
-            respostas.push(resposta.toLowerCase()); // Converte a resposta para minúsculas
+            respostas.push(resposta.toLowerCase());
         }
         var countSim = 0;
         for (var i = 0; i < respostas.length; i++) {
